<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:backgroundTint="@color/white"
    android:onClick="enter_button"
    tools:context=".Login">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/azul1_ufu"
        android:backgroundTint="@color/azul1_ufu"
        android:orientation="vertical">


        <ImageView
            android:id="@+id/logo_ufu"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_gravity="center"
            android:layout_marginTop="80dp"
            android:contentDescription="@string/logo_ufu"
            android:cropToPadding="false"
            app:srcCompat="@mipmap/ufu_logo_foreground"
            tools:ignore="PxUsage,DuplicateSpeakableTextCheck" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="30dp"
            android:backgroundTint="@android:color/transparent"
            android:fontFamily="@font/uni_sans_heavy"
            android:text="UFU STUDY"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="48sp" />

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/user_icon"
                android:layout_width="wrap_content"
                android:layout_height="80dp"
                android:layout_row="0"
                android:layout_column="0"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="-20dp"
                android:backgroundTint="@android:color/transparent"
                app:srcCompat="@mipmap/user_icon_foreground" />

            <EditText
                android:id="@+id/et_user"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_row="0"
                android:layout_column="1"
                android:layout_gravity="center_vertical"
                android:layout_marginHorizontal="50px"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/hint_user"
                android:inputType="textEmailAddress"
                android:minHeight="48dp"
                android:textColorHint="@color/azul2_ufu"
                android:textSize="14sp"
                tools:ignore="PxUsage,DuplicateSpeakableTextCheck,TextContrastCheck" />

            <ImageView
                android:id="@+id/pass_icon"
                android:layout_width="wrap_content"
                android:layout_height="80dp"
                android:layout_row="2"
                android:layout_column="0"
                android:layout_gravity="top"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="-20dp"
                app:srcCompat="@mipmap/pass_icon_foreground" />

            <EditText
                android:id="@+id/et_pass"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_row="2"
                android:layout_column="1"
                android:layout_gravity="center_vertical"
                android:layout_marginHorizontal="50px"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/hint_pass"
                android:inputType="textPassword"
                android:minHeight="48dp"
                android:textColorHint="@color/azul2_ufu"
                android:textSize="14sp"
                tools:ignore="PxUsage,DuplicateSpeakableTextCheck" />

            <ImageButton
                android:id="@+id/enter_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="4"
                android:layout_column="1"
                android:layout_gravity="center"
                android:layout_marginEnd="100dp"
                android:layout_marginBottom="100dp"
                android:backgroundTint="@android:color/transparent"
                android:contentDescription="@string/enter_button"
                android:onClick="enter_button"
                app:srcCompat="@mipmap/enter_icon_foreground" />

        </GridLayout>


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>